--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test"
+    "test": "ember test",
+    "proxy": "ember serve --proxy=http://json-api.rockandrollwithemberjs.com"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
@@ -35,7 +36,7 @@
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.14.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-fetch": "^6.7.0",
+    "ember-fetch": "^8.0.2",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -47,6 +48,9 @@
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.9.0",
     "tachyons": "^4.9.1"
+  },
+  "resolutions": {
+    "whatwg-fetch": "3.4.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
