--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.5",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-mirage": "^2.4.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-tachyons-shim": "^4.9.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
