add script to package.json to boot the development server using the authenticated back-end

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
-    "proxy": "ember serve --proxy=http://json-api.rockandrollwithemberjs.com"
+    "proxy": "ember serve --proxy=http://json-api.rockandrollwithemberjs.com",
+    "proxy-auth": "ember serve --proxy=http://auth-api.rockandrollwithemberjs.com"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
