--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-cli-tachyons-shim": "^4.9.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-cp-validations": "^4.0.0-beta.12",
     "ember-data": "~3.14.0",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^8.1.1",
