--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
+    "@percy/cli": "^1.0.0-beta.76",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.2",
@@ -59,5 +60,8 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
+  },
+  "dependencies": {
+    "@percy/ember": "^3.0.0"
   }
 }
