--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^4.0.0",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
     "ember-simple-auth": "^4.2.0",
