configure the app for github pages deployment

--- a/.github/workflows/gh-pages-deploy.yaml
+++ b/.github/workflows/gh-pages-deploy.yaml
@@ -28,7 +28,7 @@ jobs:
           fi
 
       - name: Build Application
-        run: npx ember build
+        run: npx ember build --environment=production
 
       - name: Run deploy script
         run: sh ./scripts/gh-pages-deploy.sh
